Add media query for the navbar over 390px

--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,21 @@ blockquote p {
   line-height: 1.4em;
 }
 
+@media (min-width: 390px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  nav ul {
+    margin-top: 0.2em;
+  }
+
+  nav ul li:nth-of-type(3) {
+    margin-right: 0;
+  }
+}
+
 /*
 
 - White Space
@@ -119,3 +134,17 @@ blockquote p {
 - Visual Hierarchy
 
 */
+
+.width-container {
+  display: none;
+}
+
+.display-width {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: #e6e6e6;
+  padding: 0.3em;
+  font-size: 0.85em;
+}
