Add media query for min width of 600px

--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,28 @@ blockquote p {
   }
 }
 
+@media (min-width: 600px) {
+  ul.testimonials {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+    grid-gap: 1em;
+  }
+
+  ul.testimonials li {
+    margin: 0;
+  }
+
+  ul.testimonials li:nth-of-type(3) {
+    /* Starts on row 1, col 2 and we want it on row 2 all over the end of col 3. */
+    grid-area: 2 / 1 / 2 / 3;
+  }
+
+  img {
+    clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
+  }
+}
+
 /*
 
 - White Space
