Add media query for min width of 1000px

--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,48 @@ blockquote p {
   }
 }
 
+@media (min-width: 850px) {
+  .wrapper {
+    padding: 2em;
+  }
+}
+
+@media (min-width: 1000px) {
+  .hero-left {
+    text-align: left;
+    width: 30%;
+    margin-left: 4em;
+  }
+
+  h1,
+  .hero-left p {
+    width: 100%;
+  }
+
+  img {
+    top: 0;
+    right: 0;
+    width: 50%;
+    clip-path: none;
+  }
+
+  h1 {
+    font-size: 3em;
+  }
+
+  ul.testimonials {
+    display: flex;
+  }
+
+  ul.testimonials li {
+    margin-right: 1em;
+  }
+
+  ul.testimonials li:nth-of-type(3) {
+    margin-right: 0;
+  }
+}
+
 /*
 
 - White Space
